# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .chezmoiignore.tmpl  .commit_message.tmpl  .gitignore  .hash-installs.sh  Dockerfile  Dockerfile.debian  Dockerfile.fedora  Dockerfile.ubuntu  README.md  Winaero Tweaker.ini  dot_bash_profile  dot_bashrc  dot_bwrc.tmpl  dot_commonprofile.tmpl  dot_commonrc  dot_commonrc.tmpl  dot_doskey.mac  dot_gitconfig.tmpl  dot_gitignore_global  dot_npmrc.tmpl  dot_profile  dot_pypirc.tmpl  dot_tmux.conf  dot_tmux.conf.tmpl  dot_vimrc  dot_vscode-extensions.txt  dot_wakatime.cfg.tmpl  dot_zprofile  dot_zshenv  dot_zshrc  empty_dot_ncduignores.tmpl  executable_autorun.cmd  executable_dot_bootstrap.sh  key.txt.tmpl  private_dot_claude.json  run_install-vscode-ext.cmd  run_install-vscode-ext.sh  run_nt-sync.cmd  (+11 more)
.github/: settings.yml
dot_android/: adbkey.pub  adbkey.tmpl  analytics.settings  debug.keystore.tmpl
dot_aws/: encrypted_private_config.age  encrypted_private_credentials.age
dot_cargo/: credentials.toml.tmpl
dot_claude/: config.json.tmpl  settings.json.tmpl
dot_continue/: config.yaml  config.yaml.tmpl
dot_gradle/: gradle.properties.tmpl
dot_keymap-renderer/: README.md  kdl.schema.json  key.py  keybind_regex_guide.md  keyboard.py  main.py  pyproject.toml  render.py
dot_keymap-renderer/examples/: windows.kdl.json
dot_keymap-renderer/fonts/: kbd-webfont2unicode.json
dot_m2/: settings.xml.tmpl
dot_pycalc3/: README.md  pyproject.toml
dot_ssh/: allowed_signers  config  config.tmpl  id_rsa.tmpl  private_known_hosts  (+9 more)
(+124 files in other folders)
