[project]
name = "keymap-renderer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colormath>=3.0.0",
    "jsonschema>=4.26.0",
    "lxml>=6.0.2",
    "markdown-pdf>=1.10",
    "pillow>=12.1.0",
    "requests>=2.32.5",
    "tinycss2>=1.5.1",
    "typer>=0.21.1",
    "xdg-base-dirs>=6.0.2",
]
