[project]
name = "keymap-renderer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "colormath==3.0.0",
    "json5>=0.13.0",
    "jsonschema>=4.26.0",
    "lxml==4.8.0",
    "markdown-pdf>=1.10",
    "pillow==9.1.0",
    "requests==2.27.1",
    "tinycss2==1.1.1",
    "typer>=0.21.1",
    "xdg-base-dirs>=6.0.2",
]
